--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,9 @@
 <meta name="keywords" content="The Well Church, the well church, lake stevens church, the well lake stevens, Lake Stevens Church, the well snohomish, snohomish church, Greg McMullen, 2nd Life Youth, 
 ">
 
-<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon-96x96.png" sizes="96x96">
 
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
