First pass at Bootstrap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,40 +1,22 @@
 
  
     
-    
-   <footer id="myFooter">
-    <div class="w3-container w3-blue w3-padding-20">
-        <h4><strong>The Well Church</strong></h4>
-        <p>Phone: (425) 244 - 4597<br><!-- info@thewellchurch.com<br/>-->
-        <a href="https://www.google.com/maps/place/1431+N+Machias+Rd,+Lake+Stevens,+WA+98258/@48.0107929,-122.0476422,17z/data=!3m1!4b1!4m5!3m4!1s0x549aac5610449a05:0xfe836f60e821d285!8m2!3d48.0107929!4d-122.0454535" target="_blank">1431 North Machias Road<br>Lake Stevens, WA 98258<br></a>
-        
-        </p>
+        <footer class="bg-dark text-light text-center text-lg-start mt-5">
+            <div class="container p-4">
+                <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">The Well Church</h5>
+
+                    <p>Phone: (425) 244-4597</p>
+                    <p><a class="text-muted" href="https://www.google.com/maps/place/1431+N+Machias+Rd,+Lake+Stevens,+WA+98258/@48.0107929,-122.0476422,17z/data=!3m1!4b1!4m5!3m4!1s0x549aac5610449a05:0xfe836f60e821d285!8m2!3d48.0107929!4d-122.0454535" target="_blank">1431 North Machias Road<br>Lake Stevens, WA 98258</a></p>
+                </div>
+                <div class="text-right col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Online Giving</h2>
+<a href="https://www.paypal.com/donate?hosted_button_id=C45K6VDPUBPPJ" target="_blank"><button type="button" class="btn btn-primary">Support Us</button></a>
+                </div>
+            </div>
+        </footer>
     </div>
-
-    <div class="w3-container w3-text-black w3-dark-grey w3-padding-2">
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-    </div>
-  </footer>
-
-<!-- END MAIN -->
-
-<script>
-
-//For the nav bar
-function navBar() {
-    var x = document.getElementById("mobilenav");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-    
-// Get the DIV with overlay effect
-var overlayBg = document.getElementById("myOverlay");
-
-</script>
-
-
-
-</div></div></body></html>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js" ></script>
+</body>
+</html>
